--- a/src/home.css
+++ b/src/home.css
@@ -319,15 +319,6 @@
    }
 
 
-   .contact-info {
-       line-height: 3;
-       margin: 20px;
-       font-size: 1rem;
-       text-transform: none;
-       letter-spacing: 0px;
-   }
-
-
    .contact-info p:last-child {
        margin-top: 40px;
    }
@@ -351,14 +342,16 @@
 
    .contact-info {
        margin: 2rem;
-       line-height: 4;
+       line-height: 2;
        padding: 0;
        font-size: 0.8rem;
+       text-transform: none;
+       letter-spacing: 0px;
    }
 
 
    .contact-info p {
-       margin-top: 2rem;
+       margin-top: 1.5rem;
    }
 
 
