--- a/src/styles.css
+++ b/src/styles.css
@@ -236,15 +236,27 @@ li > div:hover {
 
 
 .submenu-mobile.focus {
-   display: block;
-   margin-left: auto;
-   visibility: visible;
-   height: max-content !important;
-   width: 100% !important;
-   text-align: right;
-   background-color: black;
-   transition: height 0.2s ease-in-out;
+  display: flex;
+  flex-direction: row;
+  overflow-x: auto;
+  white-space: nowrap;
+  max-width: 100vw;
+  box-sizing: border-box;
+  padding: 0 8px;
+  scroll-behavior: smooth;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+ -webkit-overflow-scrolling: touch;
+  scroll-snap-type: x mandatory;
 }
+.submenu-mobile.focus::-webkit-scrollbar {
+  display: none;
+}
+
+.submenu-mobile .subcategory {
+  flex: 0 0 auto;
+}
+
 
 
 .subcategory {
@@ -379,7 +391,7 @@ footer div {
    display: flex;
    align-items: center;
    justify-content: center;
-   padding: 15px 0;
+   padding: 5px 0;
 }
 
 
@@ -541,7 +553,7 @@ footer div div {
 
 
    #business-name {
-       font-size: 1.1rem;
+       font-size: 1.4rem;
    }
 
 
